problem with duplicate states solved (?)